<!--
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <!-- Apps -->
    <string name="app_name">Dashclock Lunar Calendar</string>
    <string name="extension_title">Lunar Calendar</string>
    <string name="extension_description">Shows various lunar calendar information.</string>
    <string name="title_settings">Lunar Calendat Setting</string>

    <!-- Preference -->
    <string name="pref_status_number_of_lines_title">Number of lines in status</string>

    <string-array name="pref_status_number_of_lines_options">
        <item>Single line (Days)</item>
        <item>Double line (Month/Days)</item>
    </string-array>
    <string-array name="pref_status_number_of_lines_values" translatable="false">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_number_format_title">Format of date</string>

    <string-array name="pref_number_format_options">
        <item>Digital Numbers</item>
        <item>Traditional Chinese Numbers</item>
    </string-array>

    <string name="pref_number_format_default_value">d</string>

    <string-array name="pref_number_format_values" translatable="false">
        <item>d</item>
        <item>t</item>
    </string-array>

    <string name="pref_next_special_title">下一個日子</string>
    <string name="pref_next_special_summary">顯示即將來臨的下一個時節或節日</string>

    <!-- Traditional number format -->
    <string name="leap">閏</string>
    <string name="first_month">正</string>
    <string name="tenth">初十</string>
    <string name="twentieth">二十</string>
    <string name="thirtieth">三十</string>

    <string-array name="unit_number_array">
        <item>零</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>七</item>
        <item>八</item>
        <item>九</item>
        <item>十</item>
        <item>十一</item>
        <item>臘</item>
    </string-array>
    <string-array name="decade_number_array">
        <item>初</item>
        <item>十</item>
        <item>廿</item>
        <item>卅</item>
    </string-array>

    <string name="template_traditional_status_single">%1$s</string>
    <string name="template_traditional_status_double">%1$s月\n%2$s</string>
    <string name="template_traditional_expanded_title">%1$s年%2$s月%3$s %4$s</string>
    <string name="template_traditional_expanded_body">Year %1$s, Zodiac %2$s, Hour %3$s</string>

    <!-- Digital number format -->
    <string name="template_digital_month">%1$d(L)</string>
    <string name="template_digital_status_single">Day %1$d</string>
    <string name="template_digital_status_double">Mon %1$s\nDay %2$d</string>
    <string name="template_digital_expanded_title">Lunar Cal. %2$s/%3$d/%1$d %4$s</string>
    <string name="template_digital_expanded_body">Year %1$s, Zodiac %2$s, Hour %3$s</string>
    <string name="template_next_special">, %1$d days to %2$s</string>

    <!-- String arrays -->
    <string-array name="gan_array">
        <item>Jia</item>
        <item>Yi</item>
        <item>Bing</item>
        <item>Ding</item>
        <item>Wu</item>
        <item>Ji</item>
        <item>Geng</item>
        <item>Xin</item>
        <item>Ren</item>
        <item>Gui</item>
    </string-array>
    <string-array name="zhi_array">
        <item>Zi</item>
        <item>Chou</item>
        <item>Yin</item>
        <item>Mao</item>
        <item>Chen</item>
        <item>Si</item>
        <item>Wu</item>
        <item>Wei</item>
        <item>Shen</item>
        <item>You</item>
        <item>Xu</item>
        <item>Hai</item>
    </string-array>
    <string-array name="animal_array">
        <item>Rat</item>
        <item>Ox</item>
        <item>Tiger</item>
        <item>Rabbit</item>
        <item>Dragon</item>
        <item>Snake</item>
        <item>Horse</item>
        <item>Goat</item>
        <item>Monkey</item>
        <item>Rooster</item>
        <item>Dog</item>
        <item>Pig</item>
    </string-array>
    <string-array name="term_array">
        <item>Minor cold</item>
        <item>Major cold</item>
        <item>Start of spring</item>
        <item>Rain water</item>
        <item>Awakening of insects</item>
        <item>Vernal equinox</item>
        <item>Clear and bright</item>
        <item>Grain rain</item>
        <item>Start of summer</item>
        <item>Grain full</item>
        <item>Grain in ear</item>
        <item>Summer solstice</item>
        <item>Minor heat</item>
        <item>Major heat</item>
        <item>Start of autumn</item>
        <item>Limit of heat</item>
        <item>White dew</item>
        <item>Autumnal equinox</item>
        <item>Cold dew</item>
        <item>Frost descent</item>
        <item>Start of winter</item>
        <item>Minor snow</item>
        <item>Major snow</item>
        <item>Winter solstice</item>
    </string-array>
    <string-array name="holiday_array">
        <item>Spring Fest.</item>
        <item>Lantern Fest.</item>
        <item>Dragon Boat Fest.</item>
        <item>CN Valentine\'s Day</item>
        <item>Mid-autumn Fest.</item>
        <item>Double Ninth Fest.</item>
        <item>Laba Fest.</item>
        <item>New Year\'s Eve</item>
    </string-array>

</resources>